Removed and refactored code which produces warnings or was actually incorrect.